--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,6 +1,9 @@
 .main {
   width: 960px;
   margin: 0 auto;
+  padding:8px;
+  margin:8px;
+  box-shadow: 0 0 4px #ccc;
 }
 
 .title {
@@ -12,8 +15,6 @@
 }
 
 .post {
-  max-width: 800px;
-  margin: 0 auto;
   & > h1 {
     font-size: 30px;
     font-weight: bold;
