--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -6,15 +6,15 @@
   box-shadow: 0 0 4px #ccc;
 }
 
-.title {
-  margin-bottom: 20px;
-}
 .homePhoto{
   margin-bottom: 20px;
-  
+}
+.homePhoto img{
+  width: 100%;
 }
 
 .post {
+  padding: 12px;
   & > h1 {
     font-size: 30px;
     font-weight: bold;
@@ -39,19 +39,5 @@
   & > ol {
     list-style-type: decimal;
     list-style-position: inside;
-  }
-}
-
-.grid__container{
-  display: grid;  
-  grid-template-columns: repeat(3,1fr);
-  gap: 8px;
-
-  & > div{
-    box-shadow: 0 0 4px #333;
-    padding:8px;
-  }
-  & a{
-    display: block;
   }
 }
