--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,10 +19,33 @@ a {
   box-sizing: border-box;
 }
 
+.container {
+  display: flex;
+  min-height: calc(100vh - 64px);
+  background-color: white;
+  margin: 0 auto;
+  width: min-content;
+}
 
-header, footer {
-  padding: 8px;
-  height: 100px;
-  background-color: rgb(41, 84, 224);
-  text-align: center;
+#humberger {
+  height: 40px;
+  width: 40px;
+  box-sizing: border-box;
+  background-color: #fff;
+  border: 2px solid rgb(143, 143, 143);
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 8px;
+  align-items: center;
+}
+
+#humberger div {
+  height: 2px;
+  width: 26px;
+  background-color: #444;
+  border-radius: 2px;
+  display: inline-block;
+  box-sizing: border-box;
 }
